--- a/products/templates/add_product.html
+++ b/products/templates/add_product.html
@@ -8,8 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="style.css">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/normalize.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
     <main>
@@ -37,6 +38,7 @@
             <h2>Все добавленные товары:</h2>
             {% for p in all_products %}
                 <div class="product">
+                    <hr>
                     <p><strong>Название:</strong> {{ p.name }}</p>
                     <p><strong>Цена:</strong> {{ p.price }}</p>
                     <p><strong>URL:</strong> <a href="{{ p.url }}" target="_blank">{{ p.url }}</a></p>
