--- a/products/static/css/style.css
+++ b/products/static/css/style.css
@@ -103,13 +103,15 @@ header {
     font-size: 2.4rem;
 }
 
-#products {
+.products {
     display: flex;
+    flex-direction: row;
     justify-content: space-around;
     flex-wrap: wrap;
     align-content: space-around;
+    column-gap: 60px;
     row-gap: 60px;
-    margin-top: 60px;
+    margin-top: 30px;
 }
 
 .product {
