--- a/products/static/css/style.css
+++ b/products/static/css/style.css
@@ -103,6 +103,9 @@ header {
     font-size: 2.4rem;
 }
 
+
+
+
 .products {
     display: flex;
     flex-direction: row;
@@ -113,6 +116,7 @@ header {
     row-gap: 60px;
     margin-top: 30px;
 }
+
 
 .product {
     display: flex;
@@ -127,6 +131,10 @@ header {
     gap: 8px;
 }
 
+.align_start {
+    align-self: self-start;
+}
+
 .product_name {
     display: inline-block;
     width: 90%;
@@ -134,6 +142,7 @@ header {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    text-align: center;
 }
 .product_name a {
     text-decoration: none;
@@ -155,13 +164,13 @@ header {
 .procent_plus {
     font-size: 6.4rem;
     margin: 20px 0;
-    color: var(--green-procent);
+    color: var(--red-procent);
 }
 
 .procent_minus {
     font-size: 6.4rem;
     margin: 20px 0;
-    color: var(--red-procent);
+    color: var(--green-procent);
 }
 
 .zero_procent {
